--- a/components/site/app/views/layouts/site/_search.html.haml
+++ b/components/site/app/views/layouts/site/_search.html.haml
@@ -3,12 +3,12 @@
     .gsearch
       .container
         .gsearch-info
-          %br/
-          %br/
-          %br/
-          %br/
-          %br/
           .gsearch-info-content
+            %h1
+              O NOROESTE TODO, AQUI.
+            %br/
+            %br/
+            %br/
         .gsearch-wrap
           = simple_form_for :search, url: search_path, method: :get do |f|
             .gsearch-content
