--- a/components/site/app/assets/stylesheets/site/custom.css
+++ b/components/site/app/assets/stylesheets/site/custom.css
@@ -1,3 +1,7 @@
+
+.properties .hentry .property-featured .property-label{
+  top: 1px !important;
+}
 .gsearch-info-content h1 {
   color:white;
   font-weight: bold;
