--- a/components/admin/app/views/admin/properties/_form.html.haml
+++ b/components/admin/app/views/admin/properties/_form.html.haml
@@ -78,6 +78,9 @@
       = f.input :floor, as: :string, input_html: {value: f.object.rooms.present? ? f.object.floor : 0}
     .col-md-2
       = f.input :sun_position
+    .col-md-3.prediction{style:  f.object.lançamento? ? 'display: block;' : 'display: none;'} 
+      = f.label "Previsão de entrega"
+      = f.input :prediction,label: false, as: :string, input_html: { class: 'date', value: f.object.prediction ? localize(f.object.prediction) : nil}
     .col-md-2.value_rent
       = f.input :value_rent,as: :string, input_html: { class: 'coin_mask'}
   .row
@@ -90,6 +93,10 @@
       = f.input :coverage, as: :select, include_blank: false
     .col-md-4
       = f.input :status, as: :select, include_blank: false
+  %hr/
+  .row
+    .col-md-4
+      = f.input :company_id, as: :select, collection: Customer.all.order(:fantasy_name), label_method: :label_name, input_html: {multiple: true, class: 'chosen-select'}
   %hr/
   .row
     .col-md-12
@@ -110,6 +117,13 @@
 :javascript
   $(document).ready(function() {
 
+    $("#property_commercial_situation").on('change', function() {
+      if($(this).val() == "lançamento") {
+        $('.prediction').show()
+      } else {
+        $('.prediction').hide()
+      }
+    })
     $('#property_commercial_situation').on('change', function() {
 
       if($(this).val() == "aluguel") {
