--- a/components/admin/app/views/layouts/admin/_nav.html.haml
+++ b/components/admin/app/views/layouts/admin/_nav.html.haml
@@ -53,6 +53,11 @@
               %a{:href => "#{buttons_path}"} Páginas
             %li
               %a{:href => "#{buttons_path}"} Menus
+            %li.divider
+            %li
+              %a{:href => "#{message_contacts_path}"} Contato mensagens
+            %li
+              %a{:href => "#{bookmark_contacts_path}"} Contato favoritos
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
           %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
