--- a/components/site/app/views/site/properties/show.html.haml
+++ b/components/site/app/views/site/properties/show.html.haml
@@ -51,7 +51,7 @@
               .col-md-4
                 = link_to image_tag("message.png"), new_property_message_path(@property), remote: true
               .col-md-4
-                = link_to image_tag("tour.png"), @property.block.tour_360.to_s
+                = link_to image_tag("tour.png"), @property.block.tour_360.to_s, target: '_blank'
           .property-feature
             %h4.property-feature-title Atributos do Imóvel
             .property-feature-content.clearfix
@@ -99,7 +99,7 @@
                     %span.col-xs-6.col-md-7.detail-field-value= (@property.floor == 0) ? "térreo" : "#{@property.floor} º"
                     %span.col-xs-6.col-md-5.detail-field-label Tour
                     %span.col-xs-6.col-md-7.detail-field-value
-                      %a{:href => "#{@property.block.tour_360}", :target => "_BLANK"} Confira Aqui
+                      %a{:href => "#{@property.block.tour_360}", :target => "_blank"} Confira Aqui
           / END FIND PROPERTY
           / START RECENT PROPERTY
           .block-sidebar.recent-property
