--- a/components/site/app/views/site/pages/index.html.haml
+++ b/components/site/app/views/site/pages/index.html.haml
@@ -47,9 +47,9 @@
                           = star_fav(property)
 %br/
 %br/
-.container-fluid{style:'text-align: center; background-color: #669FBD;'}
-  = image_tag '/images/page_index_banner.jpg'
+.container-fluid{style:'text-align: center; background-color: #18A3BE;'}
+  = image_tag '/images/fullbanner_body.png'
   %br/
 .row
   .col-md-12{style:'text-align: center; margin: 25px 0 25px 0'}
-    = image_tag '/images/mobile_icons.jpg'
+    = image_tag '/images/responsive.png'
