--- a/components/site/app/views/layouts/site/_search.html.haml
+++ b/components/site/app/views/layouts/site/_search.html.haml
@@ -5,7 +5,7 @@
         .gsearch-info
           .gsearch-info-content
             %h1
-              O NOROESTE TODO, AQUI.
+              O NOROESTE TODO. AQUI.
             %br/
             %br/
             %br/
