--- a/components/site/app/views/site/pages/index.html.haml
+++ b/components/site/app/views/site/pages/index.html.haml
@@ -7,7 +7,7 @@
     .container
       .section-title
         %h3 Busca Exclusiva
-    - Button.where(publish: true).each do |button| 
+    - Button.where(publish: true).order(:order).each do |button| 
       .col-md-2
         = link_to image_tag(button.image), button.link.to_s
   
