--- a/components/site/app/views/site/external_users/_new.html.haml
+++ b/components/site/app/views/site/external_users/_new.html.haml
@@ -8,7 +8,7 @@
     .col-md-6{style: "text-align: center"}
       = link_to "Acessar via Google", '/auth/google_oauth2', class: 'btn btn-danger'
     .col-md-6{style: "text-align: center"}
-      = link_to "Acessar via Facebook", '/auth/google_oauth2', class: 'btn btn-primary'
+      = link_to "Acessar via Facebook", '/auth/facebook', class: 'btn btn-primary'
   %hr/
   .row
     .col-md-12
