--- a/components/site/app/views/site/bookmarks/share.html.haml
+++ b/components/site/app/views/site/bookmarks/share.html.haml
@@ -15,13 +15,17 @@
         %thead
           %tr
             %th #
-            %th Nome
+            %th Tipo
+            %th Estado
+            %th Situação
             %th Endereço
             %th Link
         %tbody
           - @bookmarks.each_with_index do |bookmark, index|
             %tr 
               %td= index + 1
-              %td= bookmark.property.name if bookmark.property.present?
-              %td= bookmark.property.address if bookmark.property.present?
+              %td= bookmark.property.type_property if bookmark.property.present?
+              %td= bookmark.property.situation if bookmark.property.present?
+              %td= bookmark.property.commercial_situation if bookmark.property.present?
+              %td= bookmark.property.address_name if bookmark.property.present?
               %td= link_to "Acessar", property_path(bookmark.property) if bookmark.property.present? 
