--- a/components/site/app/views/layouts/site/_search.html.haml
+++ b/components/site/app/views/layouts/site/_search.html.haml
@@ -58,6 +58,7 @@
 
       $.getJSON("/site/units?group_id=" + group_id, function(data) {
         var items = [];
+        items.push("<option value>Selecione...</option>");)
         $.each(data, function(key, val) {
           items.push("<option value='" + val.id + "'>" + val.name + "</option>");
         });
@@ -96,7 +97,7 @@
 
         html_two  = "<option value>Quadra</option>"
         html_two += "<option value='100_SQNW'>100 SQNW</option>"
-        html_two += "<option value='200_SQNW'>200 SQNW</option>"
+        html_two += "<option value='300_SQNW'>200 SQNW</option>"
         html_two += "<option value='700_SQNW'>700 SQNW</option>"
 
         $("#by_group").html(html_two)
@@ -112,7 +113,7 @@
         $("#empty_one").attr('name', 'by_area');
 
         html_two  = "<option value>Quadra</option>"
-        html_two += "<option value='CLNW'>CLNW</option>"
+        html_two += "<option value='_CLNW'>CLNW</option>"
         html_two += "<option value='500_CRNW'>500 CRNW</option>"
         html_two += "<option value='700_CRNW'>700 CRNW</option>"
 
