--- a/components/admin/app/views/admin/specials/index.html.haml
+++ b/components/admin/app/views/admin/specials/index.html.haml
@@ -17,6 +17,7 @@
           %tr 
             %td Ordem
             %td Nº Imóvel
+            %td Endereço
             %td Publicado?
             %td Ações
         %tbody.index-special
