--- a/components/site/app/views/layouts/site/_footer.html.haml
+++ b/components/site/app/views/layouts/site/_footer.html.haml
@@ -33,9 +33,10 @@
             %h4.ft-col-title Anuncie
             %hr/
             %ul.detail-contact-info
+              = image_tag('/images/icon/logo_white.png')
               %li
                 %i.fa.fa-map-marker>
                  Brasília
               %li
                 %i.fa.fa-envelope-o>
-                %a{:href => "mailto:dfaqui@dfaqui.com"} df@dfaqui.com
+                %a{:href => "mailto:dfaqui@dfaqui.com"} dfaqui@dfaqui.com
