--- a/components/admin/app/views/admin/properties/index.html.haml
+++ b/components/admin/app/views/admin/properties/index.html.haml
@@ -48,6 +48,7 @@
                 .btn-group
                   %button.btn.btn-primary.dropdown-toggle.glyphicon.btn-xs.glyphicon-cog{'data-toggle' => 'dropdown', 'aria-haspopup' => 'true', 'aria-expanded' => false}
                   %ul.dropdown-menu
+                    %li= link_to "Visualizar", property_path(property), remote: true
                     %li= link_to "Gerenciar imagens", property_property_images_path(property)
                     %li= link_to "Editar imóvel",edit_property_path(property)
                     %li= link_to "Excluir imóvel",property_path(property), method: :delete, data: { confirm: t(:confirm)}
