--- a/components/admin/app/views/admin/specials/_index.html.haml
+++ b/components/admin/app/views/admin/specials/_index.html.haml
@@ -1,7 +1,8 @@
-- @specials.each do |special|
+- @specials.order(:order).each do |special|
   %tr
     %td= special.order
     %td= special.property_id
+    %td= special.property.address_name
     %td= special.status ? "sim" : "não"
     %td
       = link_to "", edit_special_path(special), remote: true, class: 'btn btn-success btn-xs glyphicon glyphicon-pencil'
