--- a/components/client/app/views/layouts/client/application.html.haml
+++ b/components/client/app/views/layouts/client/application.html.haml
@@ -2,8 +2,8 @@
 %html
 %head
   %title NwAqui :: Administração
-  = stylesheet_link_tag    "client/application", media: "all"
-  = javascript_include_tag "client/application", data: { 'turbolinks-eval' => false}
+  = stylesheet_link_tag    "admin/application", media: "all"
+  = javascript_include_tag "admin/application", data: { 'turbolinks-eval' => false}
   = csrf_meta_tags
 %body#page-top
   = render 'layouts/client/nav'
