--- a/components/admin/app/views/layouts/admin/_nav.html.haml
+++ b/components/admin/app/views/layouts/admin/_nav.html.haml
@@ -50,9 +50,7 @@
               %a{:href => "#{admin_users_path}"} Usuários administradores
             %li.divider
             %li
-              %a{:href => "#{buttons_path}"} Páginas
-            %li
-              %a{:href => "#{buttons_path}"} Menus
+              %a{:href => "#{pages_path}"} Páginas
             %li.divider
             %li
               %a{:href => "#{message_contacts_path}"} Contato mensagens
