--- a/components/site/app/views/layouts/site/_search.html.haml
+++ b/components/site/app/views/layouts/site/_search.html.haml
@@ -92,7 +92,7 @@
         html_two  = "<option value='' selected>Quadra</option>"
         html_two += "<option value='100_SQNW'>100 SQNW</option>"
         html_two += "<option value='300_SQNW'>300 SQNW</option>"
-        html_two += "<option value='700_SQNW'>700 SQNW</option>"
+        html_two += "<option value='700_EQNW'>700 EQNW</option>"
 
         $("#by_group").html(html_two)
 
