--- a/components/admin/app/views/admin/pages/index.html.haml
+++ b/components/admin/app/views/admin/pages/index.html.haml
@@ -1,19 +1,29 @@
 .panel-heading
   %h3
-    %b Visão Geral
-    %br/
-    %small
-      Visão geral da plataforma
+    %b Listagem de páginas
+    %br
+    %small 
+      Lista de páginas cadastradas
+    = link_to "adicionar página", new_page_path, class: 'btn btn-xs btn-success pull-right'
 %hr/
 .panel-body
-  %table.table.table-striped.table-bordered
-    %thead
-      %tr
-        %th Total de imóveis cadastrados
-        %th Total de empreendimentos cadastrados
-        %th Total de clientes cadastrados
-    %tbody
-      %tr
-        %td= @properties
-        %td= @projects
-        %td= @customers
+  .row  
+    .col-md-12
+      %table.table.table-striped.table-hover.table-bordered.table-condensed
+        %thead 
+          %tr
+            %th.col-md-1 Cod.
+            %th.col-md-2 Ident.
+            %th Titulo
+            %th Ativo?
+            %th Ação
+        %tbody
+          - @pages.order(:id).each do |page|
+            %tr
+              %td= page.id
+              %td= page.code
+              %td= page.title
+              %td= page.publish ? 'Sim' : 'Não'
+              %td.col-md-1
+                = link_to "", edit_page_path(page), class: 'btn btn-primary glyphicon glyphicon-pencil btn-xs'
+                = link_to "", page_path(page), method: :delete, class: 'btn btn-danger glyphicon glyphicon-trash btn-xs', data: { confirm: t(:confirm)}
